tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultipleQuestLine__ETOOMANYKEYS-AAAAAAAAAAAAAAAAAAAIYQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2145,
  "prerequisites": [
    0
  ],
  "properties": {
    "auto_claim": false,
    "desc": "ERROR: Too many keys to fit a 104 key keyboard.\n\nThere are many keybinds in this modpack. To avoid conflicts, most of them are unbound by default. Only the ones available from the start are bound. Note that NEI keybinds are found in the NEI menu and not with the rest of the keybinds.\n\nHere is the list of what some of them do :\n\nBetterQuesting\nGRAVE - Open Questbook\n\nDraconic Evolution\nV - Place the item you are holding on the block you are looking at\n\nJourneymap\nB - Create a Waypoint\nCtrl+B - Open the Waypoint Manager\nJ - Open Fullscreen Map\n= - Zoom In (works on minimap too)\n- - Zoom out\n\nInventory Tweaks\nR - Sort Inventory\n\nShare Where I am\nINSERT - Places a temporary beam where you are looking at that will be seen by you and other players\nSHIFT + INSERT - Places a temporary beam where §oyou§r are that will be seen by you and other players\nCTRL + INSERT - Shares the position you are looking at with other players\nCTRL + SHIFT + INSERT - Shares your position with other players\n\nWaila - Shows information about what you are looking at\nNUMPAD1 - show/hide the Waila HUD\nNUMPAD3 - shows how to craft what you are looking at\nNUMPAD4 - shows the crafting usages of the thing you are looking at\n\n[note]If you have a non-standard keyboard layout, using the Java 17-25 version of GTNH §omight§r help you in being able to use certain keys for keybinds.\n[/note]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§9§lE_TOO_MANY_KEYS",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "UNLOCKED"
  },
  "required_prerequisites": [
    0
  ],
  "rewards": [],
  "tasks": []
}
