tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultipleQuestLine__FasterCrops-AAAAAAAAAAAAAAAAAAAMRg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3142,
  "prerequisites": [
    213
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Welcome to my ted talk, today we talk about the §6§lExtreme Industrial Greenhouse.§r\nIt is the most advanced and §l§nLAG FREE§r crop farm that will allow you to supply the amount of tea you need.\nThe machine starts at §5EV§r, but to farm IC2 crops you will need at least §dLuV§r power.\nTo see the structure, place the controller on ground and use a structure hologram to build.\nThe glass tier limits the energy tier until [note]UV[/note]. With [note]UV[/note] glass you can have an energy tier as high as you want.\nShift-click with screwdriver to change crop type (IC2/normal), sadly you can't farm both in one machine.\nThere are 3 modes to manage your crops (change with screwdriver):\n\n§lSetup mode (input):§r\nIn this mode you can plant your crops in the machine.\nJust put them in the input bus and enable the machine with a soft mallet.\nAdditionally, you need to insert block that is required for IC2 crop to grow (if any)\nWhen the bus is empty, just disable it and change the mode.\nKeep in mind that there is limited space of slots for your crops depending on the voltage.\nWith normal crops you start with 1 slot and that multiplies by 2 every tier past §5EV§r, every slot can take 64 crops of the same type.\nWith IC2 crops you start with 4 slots and that multiplies by 4 every tier past §dLuV§r, every slot can take only 1 crop.\n\n§lSetup mode (output):§r\nThis mode allows you to move your Greenhouse or upgrade your crops.\nWhen the machine is running in this mode it will output all planted crops in the output bus.\n\n§lNormal operation:§r\nWith normal crops it is a straightforward process. Base processing time is 5 seconds, at the end of operation all crops are grown and the outputs are added to the output bus. Additionally the time is lower every tier past §5EV§r §o(The time is divided by the number of tiers past §6HV§r§o, minimum 1 second. WOW)§r\n\nIC2 crops on the other hand, are not that easy. They are normally simulated, but accelerated 32 times. Process time is 5 seconds. You can check the progress of the growing process with a tricorder.\n\nIf you want to grow your crops even faster, then you can use a fertilizer (up to §l400% more drops§r!). Machine will take fertilizer from the input buses on start of the operation and will be applied to that operation only. Each fertilizer gives +200% per crop in normal mode or +10% in IC2 mode. The bonus is applied evenly on crops. Examples:\nNormal mode, 3 wheat seeds, 1 tea seeds, you insert 1 fertilizer, you will get +150% wheat drops and +50% tea drops.\nIC2 mode, 16 melon seed bags, you insert 64 fertilizer, you will get +40% drops.\n\nAdditionally, all your crops need water to grow. Every single crop drinks 1000L per operation. So for example if you have planted 576 tea seeds at [note]UV[/note] voltage you will need 576000 L per second.\n\n§lLast notes:§r\nThe animation can't be disabled.\nThe lamps can be inverted.\nThe dirt must be tilled.\nIf you encounter any issue or have any suggestion please open an issue on GitHub and ping §l@kuba6000§r.\nThis MB was created to farm tea because I wanted to.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§6§lFaster Crops",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    213
  ],
  "rewards": [],
  "tasks": []
}
