tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultipleQuestLine__GasPlanets-AAAAAAAAAAAAAAAAAAAMiQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3209,
  "prerequisites": [
    3037
  ],
  "properties": {
    "auto_claim": false,
    "desc": "You probably also want a good overview of what you can get with your Planetary Gas Siphon, and the tiers of the gas giants. So here we go:\n\nJupiter (Tier 3)\n1 Hydrogen - 15000 L/s\n2 Helium - 500 L/s\n3 Nitrogen - 300 L/s\n4 Oxygen - 200 L/s\n\nSaturn (Tier 5)\n1 Hydrogen - 18000 L/s\n2 Helium - 800 L/s\n3 Oxygen - 500 L/s\n4 Liquid Oxygen - 150 L/s\n\nUranus (Tier 5)\n1 Deuterium - 5000 L/s\n2 Neon - 450 L/s\n3 Argon - 250 L/s\n4 Krypton - 100 L/s\n\nNeptune (Tier 6)\n1 Tritium - 3000 L/s\n2 Helium-3 - 500 L/s\n3 Ammonia - 400 L/s\n4 Xenon - 350 L/s",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Gas Planets",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3037
  ],
  "rewards": [],
  "tasks": []
}
